# home-infrastructure-as-code

./: .ansible-lint  .ansible-lint-ignore  .gitignore  README.md  ansible.cfg  backend.tf  hosts.yaml  hosts_test.yaml  main.tf  pyproject.toml  vars.tf
.devcontainer/: Dockerfile  Dockerfile.node  compose.yaml  devcontainer.json
.github/actions/ansible-lint/: action.yaml  actions.yaml
.github/actions/molecule/: action.yaml  actions.yaml
.github/workflows/: lint.yaml  test.yaml
molecule/common/: create_vm.yaml  destroy.yml  hosts.yaml
molecule/common/templates/: Vagrantfile.j2  inventory_config.yaml.j2
molecule/default/: Dockerfile.j2  compose.yaml.j2  converge.yml  create.yml  destroy.yml  inventory.yaml.j2  inventory_config.yaml.j2  molecule.yml  vault_password  verify.yml
molecule/default/vars/: main.yaml
molecule/init-control-planes/: converge.yml  create.yml  molecule.yml  recreate_vm.yml
molecule/prepare/: converge.yml  create.yml  destroy.yml  molecule.yml
playbooks/: init_control_planes.yaml  init_worker_nodes.yaml  playbook.yaml  preparing.yaml  preparing_ansible.yaml  preparing_localhost.yaml
playbooks/roles/apply_kernel_module/tasks/: main.yaml
playbooks/roles/apply_kernel_module/vars/: main.yaml
playbooks/roles/check_worker_nodes_joined/tasks/: main.yaml
playbooks/roles/install_container_runtime/tasks/: containerd.yaml
playbooks/roles/install_container_runtime/vars/: main.yaml
playbooks/roles/install_dependencies/tasks/: main.yaml
playbooks/roles/install_kubetools/tasks/: apt.yaml  main.yaml
(+27 files in other folders)
