[project]
name = "home-infrastrucutre-as-code"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "ansible",
  "dnspython>=2.6.1",
  "jmespath>=1.0.1",
  "netaddr>=1.3.0",
  "requests",
]

[tool.uv]
dev-dependencies = [
    "ansible-lint>=24.9.2 ; platform_system != 'Windows'",
    "ansible-lint>=6.8.7",
    "molecule>=24.9.0",
]
